# analog_clock

./: README.md
analog_clock_code file/: CMakeLists.txt  ClockFunctions.qml  ClockNeedles.qml  DashedCircles.qml  Main.qml  main.cpp
